--- a/alohaa bar/index.html
+++ b/alohaa bar/index.html
@@ -140,6 +140,28 @@
       html{ scroll-behavior: auto; }
       .btn:hover{ transform:none; }
     }
+    /* מובייל: הטופס פחות בולט, הרקע בולט יותר */
+@media (max-width: 900px){
+  .hero::after{
+    /* מעדנים את האוברליי כדי לראות יותר את הווידאו */
+    background: linear-gradient(0deg, rgba(0,0,0,.25), rgba(0,0,0,.15)) !important;
+  }
+  .hero form{
+    background: rgba(255,255,255,.6) !important; /* חצי שקוף */
+    backdrop-filter: blur(6px);                   /* זכוכית מטושטשת */
+    -webkit-backdrop-filter: blur(6px);
+    border-color: transparent !important;
+    box-shadow: 0 8px 20px rgba(0,0,0,.06) !important;
+    padding: .9rem !important;
+  }
+  /* כדי שהשדות עצמם יישארו קריאים */
+  .hero form input,
+  .hero form select,
+  .hero form textarea{
+    background: #fff !important;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -469,3 +491,4 @@
   -->
 </body>
 </html>
+
