--- a/alohaa bar/index.html
+++ b/alohaa bar/index.html
@@ -375,13 +375,13 @@
       <p class="sec-sub">הצצה לאווירה שלנו מאירועים אמיתיים. החליפו לתמונות של Alohaa Bar.</p>
       <div class="gallery">
   <!-- תמונות -->
-  <img src="media/event1.jpeg" alt="מגיע לכל מקום" />
-  <img src="media/event2.jpeg" alt="מרענן לקיץ" />
-  <img src="media/event3.jpeg" alt="המון סוגי קוקטיילים" />
-  <img src="media/event4.jpeg" alt="בר בעיצוב" />
-  <img src="media/event5.jpeg" alt="גם ללא אלכוהול" />
-  <img src="media/event6.jpeg" alt="אירוע שקיעה" />
-  <img src="media/event7.jpeg" alt="פונצ׳ים" />
+  <img src="media/event1.jpeg" loading="lazy" alt="מגיע לכל מקום" />
+  <img src="media/event2.jpeg" loading="lazy" alt="מרענן לקיץ" />
+  <img src="media/event3.jpeg" loading="lazy" alt="המון סוגי קוקטיילים" />
+  <img src="media/event4.jpeg" loading="lazy" alt="בר בעיצוב" />
+  <img src="media/event5.jpeg" loading="lazy" alt="גם ללא אלכוהול" />
+  <img src="media/event6.jpeg" loading="lazy" alt="אירוע שקיעה" />
+  <img src="media/event7.jpeg" loading="lazy" alt="פונצ׳ים" />
 
   <!-- סרטונים -->
   <video controls>
