--- a/alohaa bar/index.html
+++ b/alohaa bar/index.html
@@ -384,11 +384,11 @@
   <img src="media/event7.jpeg" loading="lazy" alt="פונצ׳ים" />
 
   <!-- סרטונים -->
-  <video controls>
+  <video controls preload="metadata" playsinline>
     <source src="media/video1.mp4" type="video/mp4">
     הדפדפן שלך לא תומך בסרטונים.
   </video>
-  <video controls>
+  <video controls preload="metadata" playsinline>
     <source src="media/video2.mp4" type="video/mp4">
     הדפדפן שלך לא תומך בסרטונים.
   </video>
